--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         if (document.cookie === "token=Real Estate") {
             window.location.href = "realEstate.html";
         } else if (document.cookie === "token=Consultancy") {
-            window.location.href = "consultancy.html";
+            window.location.href = "Consultancy.html";
         } else {
             document.cookie = "token=nil";
         }
