--- a/realEstate.html
+++ b/realEstate.html
@@ -20,7 +20,7 @@
         if (document.cookie === "token=nil") {
             window.location.href = "index.html";
         } else if (document.cookie === "token=Consultancy") {
-            window.location.href = "consultancy.html";
+            window.location.href = "Consultancy.html";
         }
     </script>
     <script src="js/logOut.js"></script>
