--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -5,8 +5,8 @@
 	<channel>
 		<title>
 			Comments for PR Consultant </title>
-		<atom:link href="https://vinayakjob.com/comments/feed/" rel="self" type="application/rss+xml" />
-		<link>https://vinayakjob.com</link>
+		<atom:link href="https://PR Consultantjob.com/comments/feed/" rel="self" type="application/rss+xml" />
+		<link>https://PR Consultantjob.com</link>
 		<description>We place right person at right place ...</description>
 		<lastBuildDate>Thu, 13 Jan 2022 09:02:54 +0000</lastBuildDate>
 		<sy:updatePeriod>
