--- a/jobs/jobs/index.html
+++ b/jobs/jobs/index.html
@@ -1,15 +1,23 @@
 <HTML>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-<!-- Mirrored from vinayakjob.com/jobs/jobs/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Mar 2022 15:08:37 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=iso-8859-1" /><!-- /Added by HTTrack -->
+<!-- Mirrored from PR Consultantjob.com/jobs/jobs/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Mar 2022 15:08:37 GMT -->
+<!-- Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=iso-8859-1" /><!-- /Added by HTTrack -->
+
 <HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=../jobs.html"><TITLE>Page has moved</TITLE>
+    <META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8">
+    <META HTTP-EQUIV="Refresh" CONTENT="0; URL=../jobs.html">
+    <TITLE>Page has moved</TITLE>
 </HEAD>
+
 <BODY>
-<A HREF="../jobs.html"><h3>Click here...</h3></A>
+    <A HREF="../jobs.html">
+        <h3>Click here...</h3>
+    </A>
 </BODY>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-<!-- Mirrored from vinayakjob.com/jobs/jobs/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Mar 2022 15:08:37 GMT -->
+<!-- Mirrored from PR Consultantjob.com/jobs/jobs/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Mar 2022 15:08:37 GMT -->
+
 </HTML>
